0. Metadata
-----------
File version:	$Id$
Copyright:		Copyright (C) 2010 - today Master ICONE, University of La Rochelle, France.
License:		License GNU General Public License version 2 or later

1. Copyright and disclaimer
---------------------------
This application is opensource software released under the GPL.  Please
see source code and the LICENSE file

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the project "document" for Joomla! 1.6.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2010-12-05 Christophe Demko
 ! Creating project
